Fixing overlapping of header
Closes #2851

--- a/src/components/Reader/index.scss
+++ b/src/components/Reader/index.scss
@@ -22,6 +22,10 @@
   }
 }
 
+.underMenu {
+  margin-top: 1em;
+}
+
 .menu.control.inverted {
   background-color: $controlColorDark;
   border-bottom: 1px solid $highlightColorDark;
